Load (the assembler) prototype from a json file

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "cSpell.words": [
-        "Craftorio"
+        "Craftorio",
+        "Newtonsoft"
     ],
     "dotnet-test-explorer.testProjectPath": "Tests/Tests.csproj"
 }
