--- a/Craftorio/Craftorio.csproj
+++ b/Craftorio/Craftorio.csproj
@@ -34,10 +34,11 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="CE.Collections" Version="1.6" />
+    <PackageReference Include="ce.mg.input" Version="0.1.1" />
     <PackageReference Include="defaultecs" Version="0.17.2" />
     <PackageReference Include="monogame.extended" Version="3.8.0" />
-    <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.0.1641" />
-    <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.0.1641" />
+    <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.0.*" />
+    <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.0.*" />
     <PackageReference Include="newtonsoft.json" Version="13.0.1" />
   </ItemGroup>
   <ItemGroup>
